added canonical metatag to documentation pages

--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -156,3 +156,12 @@
 {{ if .Params.author }}
 <meta name="author" content="{{ .Params.author }}">
 {{ end }}
+
+<!-- Canonical URL -->
+{{ if (eq .Section "documentation") }}
+{{ if .Params.canonicalUrl }}
+<link rel="canonical" href="{{ .Params.canonicalUrl }}">
+{{ else }}
+<link rel="canonical" href="{{ .Permalink }}">
+{{ end }}
+{{ end }}
