removed usage of highlights.js because hugo uses another code highlighter

--- a/qdrant-landing/themes/qdrant/static/css/_lang-switcher.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_lang-switcher.scss
@@ -1,6 +1,9 @@
 .highlight + .highlight {
     display: none;
 }
+.highlight > pre {
+    padding: 10px 12px;
+}
 .lang-tabs {
     display: block;
     min-height: 26px;
