--- a/qdrant-landing/themes/qdrant/layouts/case-studies/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/case-studies/single.html
@@ -11,9 +11,17 @@
                         <img src="{{ .Params.preview_dir }}/title.jpg">
                     </picture>
                 </div>
+                {{ partial "breadcrumbs" . }}
                 <h1>{{ .Title }}</h1>
                 {{ .Content }}
             </article>
+            <div class="pt-3">{{ partial "author" . }}</div>
+            <div class="article__info mt-4">
+                <span class="d-inline-block mb-2 mb-md-0">
+                    {{if .Date }}{{ .Date | time.Format ":date_long" }}&nbsp;&nbsp;|&nbsp;&nbsp;{{end}}
+                </span>
+                {{ partial "share-post" . }}
+            </div>
         </section>
     </div>
 </div>
