preview pics for sections

--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -148,6 +148,21 @@
         {{ $preview_image_base :=  path.Join .Dir .ContentBaseName }}
         {{ $preview_image := printf "%s-social-preview.png" $preview_image_base }}
         {{ $image = $preview_image }}
+    {{ else }}
+
+    <!-- If there are no image for document, check preview for the section -->
+
+    {{ $preview_image_section_base :=  path.Join "static" .File.Dir }}
+    {{ $preview_image_section :=  path.Join $preview_image_section_base "social-preview.png" }}
+    {{ $preview_image_section_exists := fileExists $preview_image_section }}
+
+    {{ if $preview_image_section_exists }}
+        {{ $preview_image_section_base :=  path.Join .Dir }}
+        {{ $preview_image_section :=  path.Join $preview_image_section_base "social-preview.png" }}
+        {{ $image = $preview_image_section }}
+    {{ end }}
+
+    
     {{ end }}
 {{ end }}
 
