--- a/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
@@ -1,8 +1,10 @@
 .tableOfContent {
-  top: 0;
+  top: 10px;
   right: 0;
+  font-size: 13px;
 
   &__header {
+    font-size: 1rem;
     margin-bottom: 0.8rem;
     margin-left: -5px;
   }
@@ -14,15 +16,19 @@
   & ul li {
     padding-left: 0;
     list-style: none;
+    line-height: 1.3;
     margin: 0;
     &:not(nav > ul  > li) {
-      list-style: '· ';
+      list-style: '';
       margin-left: 0.5rem;
     }
   }
 
+  & nav > ul > li {
+    margin-bottom: 0.5rem;
+  }
+
   & a {
-    line-height: 2.2;
     color: var(--brand-secondary);
 
     &:hover {
