--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -8,7 +8,7 @@
                 <div class="article__cover mt-lg-5 mb-4">
                     <picture>
                         <source srcset="{{ .Params.preview_dir }}/title.webp" type="image/webp">
-                        <img src="{{ .Params.preview_dir }}/title.jpg">
+                        <img alt="{{ .Title }}" src="{{ .Params.preview_dir }}/title.jpg">
                     </picture>
                 </div>
                 {{ partial "breadcrumbs" . }}
