--- a/qdrant-landing/themes/qdrant/static/css/custom-animate.css
+++ b/qdrant-landing/themes/qdrant/static/css/custom-animate.css
@@ -261,19 +261,19 @@
 
 @keyframes float_up_down {
   0% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
     transform: translateY(0px);
     opacity: 1;
   }
 
   50% {
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
     transform: translateY(30px);
     opacity: 1;
   }
 
   100% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
     transform: translateY(0px);
     opacity: 1;
   }
