--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -162,6 +162,7 @@ blockquote {
 @import "blocks/post-preview";
 @import "blocks/steps-form";
 @import "blocks/documentation";
+@import "blocks/developer";
 @import "blocks/article";
 @import "blocks/blog";
 @import "blocks/article-card";
