--- a/qdrant-landing/themes/qdrant/layouts/partials/dev_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/dev_sidebar.html
@@ -58,7 +58,7 @@
                     {{ end }}
 
                     <details class="documentation__sidebar-link-group link-group {{ if $isActive }}active {{ end }}"
-                        {{ if $isActive }}open{{ end }}>
+                        {{ if and $isActive (not  (eq .Title "Articles")) }}open{{ end }}>
                         <summary class="link-group-heading">
                             <span class="mb-0">
                                 <a class="btn btn-link text-left collapsed pl-0" href="{{ $sectionLink }}">
