--- a/qdrant-landing/themes/qdrant/layouts/partials/card-action-button.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/card-action-button.html
@@ -2,9 +2,10 @@
 <!--name - button name (required)-->
 <!--link - link to the page (required)-->
 <!--external - "true" or "false" - if true opens the link in a new tab-->
-<!--iconClasses - classes for the icon, for example use font awesome -->
-<!--classes - additional classes for the button-->
-<a class="card-btn card-btn_border p-4{{if .classes}} {{ .classes }}{{end}}"
+<!--iconClasses - classes for the icon, for example use font awesome-->
+<!--classes - additional classes for the button, for example card-btn_border-->
+
+<a class="card-btn p-4{{if .classes}} {{ .classes }}{{end}}"
 href="{{ .link }}"
 {{ if .external }}_target="blank" rel="noopener nofollow"{{ end }}>
     {{ if .iconClasses }}
