removed excessive empty space at the top of docs section template

--- a/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
@@ -1,7 +1,7 @@
 {{- partial "header.html" . -}}
 
 <section class="documentation">
-    <div class="container-xxl pt-4 pt-md-5">
+    <div class="container-xxl">
         <div class="row clearfix">
             {{- partial "docs_sidebar.html" . -}}
             {{ block "main" . }}{{ end }}
