--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -22,15 +22,21 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                   </a>
                 </div> <br>
 
-              <div class="sec-title text">Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
-                or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></div>
+              <div class="sec-title text">Take a look at our <a target="_blank" href="https://qdrant.tech/demo/">Live Demos</a>
+                or build your own neural search <br> with our step-by-step <a target="_blank" href="https://qdrant.tech/documentation/tutorials/neural-search/">Tutorial</a></div>
 
-                <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive mr-sm-3 mb-2 mb-lg-0" href="{{ .Site.Params.benchmarks }}">
-                  <span class="text">Benchmarks</span>
+                <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive mr-sm-3 mb-2 mb-lg-0" href="https://qdrant.tech/documentation/quick-start/">
+                  <span class="text">Quickstart</span>
                 </a>
+                
+
+
+
+                <!--DEMOS BUTTON
                 <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive" href="{{ .Site.Params.demos }}">
                   <span class="text">Demos</span>
                 </a>
+                -->
 
             </div>
           </div>
