--- a/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
@@ -1,31 +1,35 @@
+@use "../helpers/functions" as lib;
+
 .tableOfContent {
   top: 10px;
   right: 0;
-  font-size: 13px;
+  font-size: lib.rem(14);
 
   &__header {
     font-size: 1rem;
-    margin-bottom: 0.8rem;
+    margin-bottom: lib.rem(13);
     margin-left: -5px;
   }
 
   & ul {
     margin: 0;
+    padding: 0;
   }
 
   & ul li {
-    padding-left: 0;
     list-style: none;
-    line-height: 1.3;
+    line-height: lib.rem(18);
     margin: 0;
+
     &:not(nav > ul  > li) {
       list-style: '';
-      margin-left: 0.5rem;
+      padding-left: 1rem;
     }
   }
 
-  & nav > ul > li {
-    margin-bottom: 0.5rem;
+  & a {
+    display: inline-block;
+    padding: 6px 0;
   }
 
   & a {
