--- a/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
@@ -6,8 +6,27 @@
     <!-- the variable is set -->
     {{ if gt (.TableOfContents | len) 34 }}
     <div class="sticky-top">
+        {{ range $subject.RegularPages }}
+        {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
         <h5 class="tableOfContent__header">Table of contents</h5>
         {{ .TableOfContents }}
+        {{ if .IsPage }}
+        <div class="divider mb-1"></div>
+        <ul class="tableOfContent__footer">
+            <li>
+                <a class="text-brand-p" href="{{ .Site.Params.githubDocPrefix }}{{ .File.Path }}" target="_blank">
+                    <i class="fab fa-github"></i> Edit on GitHub
+                </a>
+            </li>
+            <li>
+                <a class="text-brand-p" href="{{ .Site.Params.githubIssueLink }}" target="_blank">
+                    <i class="fa fa-bug"></i> Create an Issue
+                </a>
+            </li>
+        </ul>
+        {{ end }}
+        {{ end }}
+        {{ end }}
         <br/>
     </div>
     {{ end }}
