--- a/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
@@ -21,8 +21,7 @@
     line-height: lib.rem(18);
     margin: 0;
 
-    &:not(nav > ul  > li) {
-      list-style: '';
+    &:not(nav > ul  > li):not(ul.tableOfContent__footer > li) {
       padding-left: 1rem;
     }
   }
@@ -30,9 +29,13 @@
   & a {
     display: inline-block;
     padding: 6px 0;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
-  & a {
+  & ul:not(.tableOfContent__footer) a {
     display: block;
     line-height: 2.2;
     white-space: nowrap;
@@ -42,7 +45,10 @@
 
     &:hover {
       color: var(--brand-primary);
-      text-decoration: underline;
     }
+  }
+
+  &__footer li {
+    padding-left: 0;
   }
 }
