smaller h1 for articles and case-studies lists

--- a/qdrant-landing/themes/qdrant/static/css/_variables.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_variables.scss
@@ -1,2 +1,4 @@
 $font-family-non-content: 'SF Pro', 'Roboto', sans-serif;
 $font-family-content: 'New York', 'Serif', serif;
+
+$developer-h1-font-size: 2.25rem;
