--- a/qdrant-landing/themes/qdrant/layouts/partials/main-menu.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/main-menu.html
@@ -25,13 +25,14 @@
 
                 {{ $currentPage := . }}
                 {{ range .Site.Menus.main }}
-                {{ if .Params.in_header }}
+
+                {{ if and .Params.in_header (not (isset .Params "cols")) }}
                 <li class="navigation__item {{if or ($currentPage.IsMenuCurrent " main" .) ($currentPage.HasMenuCurrent "main" .) }}current{{end}}
                 {{if .HasChildren }}dropdown{{ end }}">
-                <a class="navigation__link" {{ if .URL }}href="{{ .URL }}" {{ end }}>{{ .Name }}
-                    {{ if .HasChildren }}
-                </a>
-                <ul>
+                <a class="navigation__link" {{ if .URL }}href="{{ .URL }}" {{ end }}>{{ .Name }}</a>
+                {{ if .HasChildren }}
+
+                <ul class="navigation__submenu">
                     {{ range .Children }}
                     <li><a href="{{ .URL }}" {{ if .Params.external }}target="_blank" {{ end }}>
                         {{ if .Pre }} {{ .Pre }}&nbsp;{{ end }}
@@ -39,13 +40,41 @@
                     </a></li>
                     {{ end }}
                 </ul>
-                {{ else }}
-                </a>
                 {{ end }}
 
                 </li>
-
                 {{ end }}
+
+                {{ if (and .Params.in_header  .Params.cols) }}
+                {{ $currentChildren := .Children }}
+                <li class="navigation__item {{if or ($currentPage.IsMenuCurrent " main" .) ($currentPage.HasMenuCurrent "main" .) }}current{{end}}
+                {{if .HasChildren }}dropdown{{ end }}">
+                <a class="navigation__link" {{ if .URL }}href="{{ .URL }}" {{ end }}>{{ .Name }}</a>
+
+                <ul class="navigation__multicol-submenu">
+                    <li class="list-group list-group-horizontal">
+
+                        {{ range seq .Params.cols }}
+                        {{ $col := . }}
+
+                        <ul class="navigation__column p-0 p-lg-2 list-group-item border-0 list-group-lg list-group-flush">
+                            {{ range $currentChildren }}
+                            {{ if and (eq .Params.col $col) .Params.is_col_name }}
+                            <li class="list-group-item">
+                                {{ .Pre | safeHTML }}&nbsp;
+                                <strong>{{ .Name }}</strong>
+                            </li>
+                            {{ end }}
+                            {{ if and (eq .Params.col $col) (not .Params.is_col_name) }}
+                            <li class="list-group-item"><a href="">{{ .Name }}</a></li>
+                            {{ end }}
+                            {{ end }}
+                        </ul>
+                        {{ end }}
+                    </li>
+                </ul>
+                {{ end }}
+                </li>
                 {{ end }}
 
                 <li>
