--- a/qdrant-landing/themes/qdrant/layouts/partials/main-menu.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/main-menu.html
@@ -66,7 +66,7 @@
                             </li>
                             {{ end }}
                             {{ if and (eq .Params.col $col) (not .Params.is_col_name) }}
-                            <li class="list-group-item"><a href="">{{ .Name }}</a></li>
+                            <li class="list-group-item"><a href="{{ .URL }}">{{ .Name }}</a></li>
                             {{ end }}
                             {{ end }}
                         </ul>
