--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article-card.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article-card.scss
@@ -116,4 +116,11 @@
       text-align: center;
     }
   }
+
+  &_content {
+    .article-card__text {
+      font-size: $font-size-content;
+      line-height: $line-height-content;
+    }
+  }
 }
