--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -46,12 +46,10 @@ article aside[role="status"]:before {
   font-weight: 900;
 }
 
-/*.blog,*/
 .article {
-  font-family: $font-family-content;
-  font-size: lib.rem(18);
-  font-weight: 400;
-  line-height: lib.rem(32);
+  font-size: lib.rem($font-size-content);
+  font-weight: 200;
+  line-height: lib.rem(28);
 
   @include mixins.content-reset;
 
@@ -61,8 +59,10 @@ article aside[role="status"]:before {
     }
   }
 
-  p, span, ul, ol, li {
-    font: inherit;
+  p, span, ul, ol, li, td {
+    font-size: $font-size-content;
+    line-height: $line-height-content;
+    font-weight: $font-weight-content;
   }
 
   p, ul {
@@ -76,7 +76,6 @@ article aside[role="status"]:before {
 
   h1, h2, h3, h4, h5 {
     margin-bottom: lib.rem(24);
-    font-family: $font-family-non-content;
     font-weight: 700;
     font-style: normal;
   }
@@ -133,6 +132,10 @@ article aside[role="status"]:before {
     line-height: lib.rem(32);
   }
 
+  pre, pre span, pre code {
+    font-size: $font-size-code;
+  }
+
   &__info {
     display: flex;
     align-items: center;
@@ -141,7 +144,7 @@ article aside[role="status"]:before {
     color: var(--brand-dark-gray);
     font-family: $font-family-non-content;
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
     line-height: lib.rem(17);
   }
@@ -153,10 +156,6 @@ article aside[role="status"]:before {
     width: 100%;
     border-radius: lib.rem(14);
     overflow: hidden;
-
-    @include media-breakpoint-up(lg) {
-      height: lib.rem(300);
-    }
 
     img {
       width: 100%;
