--- a/qdrant-landing/themes/qdrant/static/css/_reset.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_reset.scss
@@ -23,10 +23,10 @@
 
 body {
   font-family:'Roboto', 'SF Pro', 'Open Sans', sans-serif;
-  font-size:$font-size-content;
+  font-size:14px;
   line-height:$line-height-content;
   color: var(--brand-secondary);
-  font-weight:$font-weight-base;
+  font-weight:400;
   background:#ffffff;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
