--- a/qdrant-landing/themes/qdrant/static/css/_variables.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_variables.scss
@@ -4,6 +4,8 @@ $font-family-non-content: 'Roboto', 'SF Pro', 'Open Sans', sans-serif;
 $font-family-content: 'Roboto', 'Serif', serif;
 $font-size-content: lib.rem(16);
 $line-height-content: lib.rem(28);
-$font-weight-base: 200;
+
+$font-weight-base: 400;
+$font-weight-content: 200;
 
 $developer-h1-font-size: 2.25rem;
