--- a/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
@@ -36,6 +36,14 @@
     p {
       margin-bottom: 0.7rem;
     }
+
+    p, span, ul, ol, li, td {
+      font-family: $font-family-content;
+      font-size: $font-size-content;
+      line-height: $line-height-content;
+      font-weight: $font-weight-content;
+    }
+
   }
 
   &__sidebar-inner {
