--- a/qdrant-landing/themes/qdrant/layouts/developer/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/developer/list.html
@@ -4,7 +4,7 @@
     {{ if eq .Page .FirstSection }} <!-- if this is the section root -->
     <!--  example two - card buttons on blue background -->
     <div class="mt-5 pt-4 pb-5" style="background:var(--brand-light);">
-        <h1 class="mb-4 text-center">Qdrant Developer Portal</h1>
+        <h1 class="mb-4 text-center">Prototype with Qdrant:</h1>
         <div class="d-flex justify-content-center">
             <div class="developer__card-btn mr-0 mr-md-4 mb-4 mb-md-0">
                 {{- partial "card-action-button.html" (dict "context" . "name" "Quick Start" "link"
