fix for the mobile dev portal core page

--- a/qdrant-landing/themes/qdrant/layouts/developer/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/developer/list.html
@@ -6,7 +6,7 @@
     <!--  example two - card buttons on blue background -->
     <div class="mt-5 pt-4 pb-5" style="background:var(--brand-light);">
         <h1 class="mb-4 text-center">Prototype with Qdrant:</h1>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex flex-column flex-md-row justify-content-center pl-4 pr-4 pr-md-0">
             <div class="developer__card-btn mr-0 mr-md-4 mb-4 mb-md-0">
                 {{- partial "card-action-button.html" (dict "context" . "name" "Quick Start" "link"
                 "/documentation/quick-start/" "iconClasses" "fa fa-memory") -}}
