--- a/qdrant-landing/themes/qdrant/layouts/documentation/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/list.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
 <article class="documentation__article col-12 col-md-9 col-lg-8 pb-5">
 
-    {{ .Content }}
+    {{ $wrappedTable := printf "<div class=table-responsive> ${1} </div>" }}
+    {{ .Content | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
 
 </article>
 {{ end }}
