--- a/qdrant-landing/themes/qdrant/static/css/_variables.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_variables.scss
@@ -1,11 +1,2 @@
-@use "helpers/functions" as lib;
-
-$font-family-non-content: 'Roboto', 'SF Pro', 'Open Sans', sans-serif;
-$font-family-content: 'Roboto', 'Serif', serif;
-$font-size-content: lib.rem(16);
-$line-height-content: lib.rem(28);
-
-$font-weight-base: 400;
-$font-weight-content: 200;
-
-$developer-h1-font-size: 2.25rem;
+$font-family-non-content: 'SF Pro', 'Roboto', sans-serif;
+$font-family-content: 'New York', 'Serif', serif;
