--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -50,11 +50,19 @@ docker run -p 6333:6333 qdrant/qdrant</code>
   </section>
   <!-- End Banner Section -->
 
+  <!--Customers Section-->
+  <section class="pt-5 mt-5">
+    {{ with (.Site.GetPage "section" "stack") }}
+      {{ partial "customers-section" . }}
+    {{ end }}
+  </section>
+  <!--End Customers Section-->
+
 
   {{ with (.Site.GetPage "section" "features") }}
 
   <!-- Feature Section -->
-  <section class="features-section">
+  <section class="features-section pt-5">
     <div class="auto-container">
       <div class="row clearfix">
 
@@ -189,32 +197,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
   {{ end }}
   <!-- End Business Section -->
 
-
-  {{ with (.Site.GetPage "section" "stack") }}
-  <!--Clients Section-->
-<section class="clients-section">
-  <div class="auto-container">
-    <div class="row">
-      <div class="col-12 sec-title">
-        <h2>{{ .Title | safeHTML }}</h2>
-        <div class="text">{{ .Params.subtitle}}</div>
-      </div>
-    </div>
-
-    <ul class="sponsors-outer">
-      {{ range $i, $e := first 3 .Pages }}
-      <li class="mt-3 mb-3 image-box">
-        <a href="{{ .Params.origin_url }}" target="_blank" rel="nofollow"><img src="{{ .Params.image }}-mono.png" alt=""></a>
-      </li>
-      {{ end }}
-    </ul>
-
-  </div>
-</section>
-  <!--End Clients Section-->
-  {{ end }}
-
-  {{ with (.Site.GetPage "section" "articles") }}
+{{ with (.Site.GetPage "section" "articles") }}
   <!-- Start Articles Section -->
   <section id="articles" class="projects-section-two" style="background: var(--brand-light);">
     <div class="auto-container">
