--- a/qdrant-landing/themes/qdrant/static/css/blocks/_business-section-two.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_business-section-two.scss
@@ -13,7 +13,7 @@
   position: relative;
 
   .sec-title {
-    margin-bottom: lib.rem(80);
+    margin-bottom: lib.rem(40);
   }
 
   .inner-container {
@@ -62,6 +62,16 @@
     display: flex;
     width: 100%;
     position: relative;
+    &:after {
+      @include media-breakpoint-up(lg) {
+        content: "";
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 lib.rem(20) lib.rem(40) white;
+      }
+    }
 
     .tabs-content {
       width: 100%;
@@ -83,6 +93,7 @@
 
       @include media-breakpoint-up(lg) {
         height: lib.rem(500);
+        padding-top: lib.rem(40);
       }
 
       .content-column {
@@ -158,7 +169,7 @@
           width: lib.rem(360);
           margin-top: lib.rem(38);
           padding-left: lib.rem(40);
-          top: 0;
+          top: lib.rem(40);
           left: unset;
           bottom: lib.rem(150);
         }
