--- a/qdrant-landing/themes/qdrant/layouts/partials/customers-section.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/customers-section.html
@@ -14,14 +14,14 @@
                         <span>
                         {{ range .Pages }}
                             <div class="marquee__item">
-                                <img src="{{ .Params.image }}-mono.png" alt="{{ .Params.name}} logo">
+                                <img src="{{ .Params.image }}.png" alt="{{ .Params.name}} logo">
                             </div>
                         {{ end }}
                         </span>
                 <span>
                         {{ range .Pages }}
                             <div class="marquee__item">
-                                <img src="{{ .Params.image }}-mono.png" alt="{{ .Params.name}} logo">
+                                <img src="{{ .Params.image }}.png" alt="{{ .Params.name}} logo">
                             </div>
                         {{ end }}
                         </span>
